// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`any\` 1`] = `
"export type DeletePetPetidMutationResponse = any;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`unknown\` 1`] = `
"export type DeletePetPetidMutationResponse = unknown;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 1`] = `
"import { Pets } from "./Pets";
import { Error } from "./Error";

 /**
 * @type "object"
*/
export type ListPetsQueryParams = {
    /**
     * @description "How many items to return at one time (max 100)"
     * @type "string" | undefined
    */
    limit?: string;
};

 export type ListPets200 = Pets;

 export type ListPetsError = Error;

 export type ListPetsQueryResponse = Pets;
export type ListPetsQuery = {
    Response: ListPetsQueryResponse;
    QueryParams: ListPetsQueryParams;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 2`] = `
"import { Pet } from "./Pet";
import { Error } from "./Error";

 /**
 * @type "object"
*/
export type ShowPetByIdPathParams = {
    /**
     * @description "The id of the pet to retrieve"
     * @type "string" | undefined
    */
    petId?: string;
    /**
     * @description "The id of the pet to retrieve"
     * @type "string" | undefined
    */
    testId?: string;
};

 export type ShowPetById200 = Pet;

 export type ShowPetByIdError = Error;

 export type ShowPetByIdQueryResponse = Pet;
export type ShowPetByIdQuery = {
    Response: ShowPetByIdQueryResponse;
    PathParams: ShowPetByIdPathParams;
};
"
`;

exports[`OperationGenerator > [POST] /pets 201 1`] = `
"import { Error } from "./Error";
import { ErrorCode } from "./ErrorCode";

 /**
 * @type "object"
*/
export type CreatePetsMutationRequest = {
    /**
     * @type "string" | undefined
    */
    name?: string;
    /**
     * @type "string" | undefined
    */
    tag?: string;
};

 export type CreatePetsError = Error;

 /**
 * @description "Null response"
*/
export type CreatePets201 = (Error & {
    name?: ErrorCode;
});

 /**
 * @description "Null response"
*/
export type CreatePetsMutationResponse = (Error & {
    name?: ErrorCode;
});
export type CreatePetsMutation = {
    Response: CreatePetsMutationResponse;
    Request: CreatePetsMutationRequest;
};
"
`;
